fix(accordion): header alignment

--- a/packages/react/src/accordion/src/styles/index.module.scss
+++ b/packages/react/src/accordion/src/styles/index.module.scss
@@ -19,7 +19,7 @@
   &__header {
     display: flex;
     gap: theme.get-spacing("lg");
-    align-items: baseline;
+    align-items: center;
     appearance: auto;
     cursor: pointer;
 
